# saran

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  opencode.json  pyproject.toml
assets/: saran.ascii.txt
case_studies/gh-pr-review/: SKILL.md  gh-pr-review  gh-pr-review.template  uninstall  x-gh-pr-review
case_studies/gh-ro/: gh-ro  saran-ro
case_studies/gh-ro/commands/: auth.yaml
case_studies/greeter/: greeter  saran-greeter  uninstall  x-greeter
crates/saran/: Cargo.toml
crates/saran-codegen/: Cargo.toml
crates/saran-codegen/src/: lib.rs  tests.rs
crates/saran-core/: AGENTS.md  Cargo.toml  README.md
crates/saran-core/src/: lib.rs  tests.rs
crates/saran-parser/: AGENTS.md  Cargo.toml  README.md
crates/saran-parser/src/: lib.rs  tests.rs
crates/saran-parser/tests/fixtures/: ar-all.yaml  ca-all.yaml  of-all.yaml  re-all.yaml  tl-01-missing-name.yaml  tl-02-empty-name.yaml  tl-03-missing-version.yaml  tl-04-invalid-semver.yaml  tl-05-valid-prerelease.yaml  tl-06-missing-commands.yaml  tl-07-empty-commands.yaml  tl-08-valid-minimal.yaml  tl-all.yaml  vd-all.yaml  vr-all.yaml
crates/saran-state/: AGENTS.md  Cargo.toml  README.md
crates/saran-state/src/: env.rs  error.rs  lib.rs  quotas.rs  state.rs  tests.rs
crates/saran-test/: Cargo.toml  README.md
crates/saran-test/src/: lib.rs
crates/saran-types/: AGENTS.md  Cargo.toml  README.md
crates/saran-types/src/: lib.rs  tests.rs
crates/saran-validation/: Cargo.toml
crates/saran-validation/src/: lib.rs
crates/saran/src/: main.rs
grip/: cli.py  model.py
saran/: action.py  cli.py  model.py
scripts/: coverage.sh
spec/: INDEX.md  saran-cli.md  saran-codegen.md  saran-conventions.md  saran-env.md  saran-format.md  saran-state.md
spec/examples/: gh-issue-repo-ro.yaml  gh-issue-ro.yaml  gh-pr-repo-ro.yaml  gh-pr-ro.yaml  greet.yaml
spec/examples/gh/: gh-issue-comment.issue.rw.quota.yaml  gh-issue-create.repo.rw.quota.yaml  gh-issue-repo-comment-quota.yaml  gh-issue-repo-create-quota.yaml  gh-issue-ro.yaml  gh-issue.repo.ro.yaml  gh-issue.ro.yaml  gh-pr-comment.pr.rw.quota.yaml  gh-pr-repo-comment-quota.yaml  gh-pr-ro.yaml  gh-pr.repo.ro.yaml  gh-pr.ro.yaml  gh-release-repo-ro.yaml  gh-release.repo.ro.yaml  gh-run-repo-ro.yaml  gh-run-ro.yaml  gh-run.repo.ro.yaml  gh-run.ro.yaml  gh-search-repo.yaml  gh-search.repo.ro.yaml
spec/examples/glab/: glab-ci.repo.ro.yaml  glab-ci.ro.yaml  glab-issue-create.repo.rw.quota.yaml  glab-issue-note.issue.rw.quota.yaml  glab-issue.repo.ro.yaml  glab-issue.ro.yaml  glab-mr-note.mr.rw.quota.yaml  glab-mr.repo.ro.yaml  glab-mr.ro.yaml  glab-release.repo.ro.yaml
spec/examples/redis-cli/: redis-cli-info.db.ro.yaml  redis-cli-info.server.ro.yaml  redis-cli-key-meta.prefix.ro.yaml  redis-cli-string-set.key.rw.quota.yaml
spec/tests/: README.md
spec/tests/integration/: README.md
spec/tests/unit/: 01-yaml-validation.md  02-token-parsing.md  03-variable-resolution.md  04-substitution-resolution.md  05-argument-assembly.md  06-state-management.md  DEPENDENCIES.md  IMPLEMENTATION.md  README.md
(+1 files in other folders)
