[workspace]
members = [
    "crates/saran",
    "crates/saran-core",
    "crates/saran-codegen",
    "crates/saran-validation",
    "crates/saran-parser",
    "crates/saran-types",
    "crates/saran-test",
    "crates/saran-state",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.10"
semver = "1.0"
tempfile = "3.8"

saran-types = { path = "crates/saran-types", version = "0.1.0" }
saran-core = { path = "crates/saran-core", version = "0.1.0" }
saran-parser = { path = "crates/saran-parser", version = "0.1.0" }
saran-validation = { path = "crates/saran-validation", version = "0.1.0" }
saran-codegen = { path = "crates/saran-codegen", version = "0.1.0" }
saran-test = { path = "crates/saran-test", version = "0.1.0" }
saran-state = { path = "crates/saran-state", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = true
strip = true
