[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saran"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.3.1", "pydantic>=2.12.5", "yaml-reference>=2.6.2"]

[project.scripts]
saran = "saran.cli:main"
