[package]
name = "saran-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_yaml.workspace = true
serde.workspace = true
saran-types.workspace = true
saran-parser.workspace = true
thiserror.workspace = true

[dev-dependencies]
saran-test.workspace = true
