[package]
name = "saran-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_yaml.workspace = true
saran-types.workspace = true
regex.workspace = true
thiserror.workspace = true
semver.workspace = true

[dev-dependencies]
saran-test.workspace = true
