[package]
name = "saran-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_yaml.workspace = true
serde.workspace = true
saran-types.workspace = true
saran-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
saran-test.workspace = true
